RESOLVED FIXED41209
Fill mode is broken with multiple keyframes
https://bugs.webkit.org/show_bug.cgi?id=41209
Summary Fill mode is broken with multiple keyframes
Dean Jackson
Reported 2010-06-25 04:52:39 PDT
Created attachment 59759 [details] test case I'm ashamed that this got past my testing. Forward fill modes are broken when there is more than one keyframe. I've attached an updated regression test which shows the problem.
Attachments
test case (5.04 KB, text/html)
2010-06-25 04:52 PDT, Dean Jackson
no flags
Patch (18.13 KB, patch)
2010-09-09 04:48 PDT, Dean Jackson
simon.fraser: review+
Dean Jackson
Comment 1 2010-09-08 17:10:58 PDT
Dean Jackson
Comment 2 2010-09-09 04:48:36 PDT
Simon Fraser (smfr)
Comment 3 2010-09-09 10:27:23 PDT
Comment on attachment 67021 [details] Patch Can the tests use animation-test-helpers.js? If the pause stuff doesn't work with fill modes, we should fix it. > diff --git a/WebCore/ChangeLog b/WebCore/ChangeLog > +2010-09-09 Dean Jackson <dino@apple.com> > + > + Reviewed by NOBODY (OOPS!). > + > + Fill mode is broken with multiple keyframes > + https://bugs.webkit.org/show_bug.cgi?id=41209 > + This needs to say what the problem was, and how you fixed it. r=me, but it would be nice of the tests could be more cookie-cutter, and make use of the pause API so they run faster.
Dean Jackson
Comment 4 2010-09-09 11:05:03 PDT
The tests can't use the API because they don't test values during the run. They are testing values before and after. They are all event based rather than timeouts - so it should be ok.
Dean Jackson
Comment 5 2010-09-09 11:13:25 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog A LayoutTests/animations/fill-mode-missing-from-to-keyframes-expected.txt A LayoutTests/animations/fill-mode-missing-from-to-keyframes.html A LayoutTests/animations/fill-mode-multiple-keyframes-expected.txt A LayoutTests/animations/fill-mode-multiple-keyframes.html M WebCore/ChangeLog M WebCore/page/animation/KeyframeAnimation.cpp Committed r67098
Note You need to log in before you can comment on or make changes to this bug.