third_party/WebKit/WebCore/page/animation/KeyframeAnimation.cpp
@@ -40,6 +40,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "RenderStyle.h"
 #include <wtf/UnusedParam.h>
 
+using namespace std;
+
 namespace WebCore {
 
 KeyframeAnimation::KeyframeAnimation(const Animation* animation, RenderObject* renderer, int index, CompositeAnimation* compAnim, RenderStyle* unanimatedStyle)
@@ -67,6 +69,8 @@ void KeyframeAnimation::fetchIntervalEndpointsForProperty(int property, const Re
 {
     // Find the first key
     double elapsedTime = getElapsedTime();
+    if (m_animation->duration() && m_animation->iterationCount() != Animation::IterationCountInfinite)
+        elapsedTime = min(elapsedTime, m_animation->duration() * m_animation->iterationCount());
 
     double fractionalTime = m_animation->duration() ? (elapsedTime / m_animation->duration()) : 1;
 
@@ -76,6 +80,8 @@ void KeyframeAnimation::fetchIntervalEndpointsForProperty(int property, const Re
 
     // FIXME: share this code with AnimationBase::progress().
     int iteration = static_cast<int>(fractionalTime);
+    if (m_animation->iterationCount() != Animation::IterationCountInfinite)
+        iteration = min(iteration, m_animation->iterationCount() - 1);
     fractionalTime -= iteration;
     
     bool reversing = (m_animation->direction() == Animation::AnimationDirectionAlternate) && (iteration & 1);
